# open-api/immich-openapi-specs.json
@@ -10676,9 +10676,6 @@
           "backgroundTask": {
             "$ref": "#/components/schemas/JobSettingsDto"
           },
-          "duplicateDetection": {
-            "$ref": "#/components/schemas/JobSettingsDto"
-          },
           "faceDetection": {
             "$ref": "#/components/schemas/JobSettingsDto"
           },
@@ -10709,7 +10706,6 @@
         },
         "required": [
           "backgroundTask",
-          "duplicateDetection",
           "faceDetection",
           "library",
           "metadataExtraction",
