# server/src/dtos/system-config.dto.ts
@@ -189,12 +189,6 @@ class SystemConfigJobDto implements Record<ConcurrentQueueName, JobSettingsDto> 
   @ValidateNested()
   @IsObject()
   @Type(() => JobSettingsDto)
-  [QueueName.DUPLICATE_DETECTION]!: JobSettingsDto;
-
-  @ApiProperty({ type: JobSettingsDto })
-  @ValidateNested()
-  @IsObject()
-  @Type(() => JobSettingsDto)
   [QueueName.FACE_DETECTION]!: JobSettingsDto;
 
   @ApiProperty({ type: JobSettingsDto })
